--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>    
         </div>
         <ul class="nav-menu">
-            <li class="li-hebergements active"><a href="#hebergements">Hébérgements</a></li>
+            <li class="li-hebergements"><a href="#hebergements">Hébérgements</a></li>
             <li class="li-activites"><a href="#activites">Activités</a></li>
         </ul>
     </nav>
