--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -46,27 +46,27 @@
                 </form>
                 <div class="filters-container">
                     <span class="filters-title">Filtres</span>
-                     <div class="btns-container">
-                        <button class="filter-btn">
-                            <img src="images/icons/economique.png" alt="">
-                            Economique
-                        </button>
-                        <button class="filter-btn">
-                            <img src="images/icons/famillial.png" alt="">
-                            Famillial
-                        </button>
-                        <button class="filter-btn">
-                            <img src="images/icons/romantique.png" alt="">
-                            Romantique
-                        </button>
-                        <button class="filter-btn">
-                            <img src="images/icons/pépites.png" alt="">
-                            Nos pépites
-                        </button>
+                    <div class="btns-container">
+                    <button class="filter-btn">
+                        <img src="images/icons/economique.png" alt="">
+                        Économique
+                    </button>
+                    <button class="filter-btn">
+                        <img src="images/icons/famillial.png" alt="">
+                        Famillial
+                    </button>
+                    <button class="filter-btn">
+                        <img src="images/icons/romantique.png" alt="">
+                        Romantique
+                    </button>
+                    <button class="filter-btn">
+                        <img src="images/icons/pépites.png" alt="">
+                        Nos pépites
+                    </button>
                     </div>
                 </div>
                 <div class="total-disponibility">
-                    <img class="elipse" src="images/icons/Ellipse 11.png" alt="">
+                    <img class="elipse" src="images/icons/ellipse.png" alt="">
                     <img class="info" src="images/icons/i.png" alt="">
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
@@ -80,7 +80,7 @@
 
                 <section id="hebergements" class="hebergements">
                     <div class="hebergements-title">        
-                        <h1>Hébérgements à Marseille</h2>                        
+                        <h1>Hébérgements à Marseille</h1>                        
                     </div>
                     <div class="hebergements-cards">
                         
@@ -282,7 +282,7 @@
 
             <section id="activites" class="activites">
                 <div class="activites-title">
-                    <h3 class="section-title">Activités à Marseille</p>
+                    <h3 class="section-title">Activités à Marseille</h3>
                 </div>
                 <div class="activites-cards">                    
                         <article class="activite-card">
@@ -325,9 +325,9 @@
         <footer>
             <section class="footer">
                 <div class="footer-menu-container">
-                    <h3 class="footer-title">A propos</h3>
+                    <h3 class="footer-title">À propos</h3>
                     <ul class="footer-menu">
-                        <li><a class="footer-link" href="#">Fonctionnement</a></li>
+                        <li><a class="footer-link" href="#">Fonctionnement du site</a></li>
                         <li><a class="footer-link" href="#">Conditions générales</a></li>
                         <li><a class="footer-link" href="#">Données et confidentialité</a></li>
                     </ul>
