--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="total-disponibility">
-                    <img class="elipse" src="images/icons/ellipse.png" alt="">
+                    <img class="ellipse" src="images/icons/ellipse.png" alt="">
                     <img class="info" src="images/icons/i.png" alt="">
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
